# grpc_repro_38916

./: .bazelrc  BUILD  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.old  README.md  WORKSPACE  repro_38916.proto  repro_38916_server.cc  run_grpcurl_in_podman.sh  run_workspace_in_podman.sh
